2004-01-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/AncestorChart2.py: more multipage improvements
	* src/plugins/Makefile.am: export AncestorChart2.py

2004-01-17  Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Update.
	* src/errdialogs.glade: Add check button to the missing media dialog.
	* src/QuestionDialog.py (MissingMediaDialog.__init__): Add default
	action property.
	* src/ReadXML.py (import_data): Add support for default action.
	* src/plugins/WebPage.py (write_gallery): Use object ID as a file name
	- prevents collision between identical names coming from different dirs.

	* src/gramps_main.py (save_media): Add support for default action.
	* src/plugins/Check.py (cleanup_missing_photos): Add support for default action.
	* src/plugins/WriteCD.py (on_ok_clicked): Add support for default action.
	* src/plugins/WritePkg.py (export): Add support for default action.
	* src/plugins/WriteFtree.py: Do not import unused dialog.
	
2004-01-16  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/AncestorChart2.py: first pass at multipage output

2004-01-16  Michel Guitel  <michel.guitel@free.fr>
	* doc/gramps-manual/fr/mainwin.xml: Update.
	* doc/gramps-manual/fr/usage.xml: Update.
	* doc/gramps-manual/fr/figures/*.png: Update.

2004-01-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleStore.py: handle unicode conversion from get_value

2004-01-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/AbiWord2Doc.py: pychecker fixes
	* src/docgen/HtmlDoc.py: pychecker fixes
	* src/docgen/KwordDoc.py: pychecker fixes
	* src/docgen/LaTeXDoc.py: pychecker fixes
	* src/docgen/OpenOfficeDoc.py: pychecker fixes
	* src/docgen/OpenSpreadSheet.py: pychecker fixes
	* src/docgen/PSDrawDoc.py: pychecker fixes
	* src/docgen/PdfDoc.py: pychecker fixes
	* src/docgen/SvgDrawDoc.py: pychecker fixes
	* src/plugins/Ancestors.py: pychecker fixes
	* src/plugins/BookReport.py: pychecker fixes